[package]
name = "night"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.9"
hmac = "0.10"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.5"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tungstenite = "0.19.0"
futures-util = "0.3"
url = "2.2"
lazy_static = "1.4.0"
openssl = "0.10"
openssl-sys = "0.9"
log = "0.4"
env_logger = "0.9"
hyper = "0.14"
hyper-tls = "0.5"
thiserror = "1.0"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"
async-trait = "0.1"
stream-reconnect = "0.3.4"
tokio-stream = "0.1.14"
once_cell = "1.8"
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
parking_lot = "0.12.1" 
